--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 spring.data.mongodb.uri=mongodb://rakeshroshan19:AnuragSagar@isdesigncluster-shard-00-00-zzooa.gcp.mongodb.net:27017,isdesigncluster-shard-00-01-zzooa.gcp.mongodb.net:27017,isdesigncluster-shard-00-02-zzooa.gcp.mongodb.net:27017/test?ssl=true&replicaSet=ISDesignCluster-shard-0&authSource=admin&retryWrites=true&w=majority
 spring.data.mongodb.database=AnuragUser
-products.details.url=http://localhost:8081/products/id/{id}
+products.details.url=https://toyswer-products-api.herokuapp.com/products/id/{id}
 connect.timeout=10000
 read.timeout=10000
